<resources>
    <string name="app_name">MedReminderApp</string>
    <string name="title_home">Home</string>
    <string name="title_medicine">Meds</string>
    <string name="title_profile">Profile</string>
    <string name="logout">LOGOUT</string>
    <string name="profile_image">Profile image</string>
    <string name="add_medicine">Add medicine</string>
    <string name="birth_date">Birth date :</string>
    <string name="username">Username :</string>
    <string name="full_name">Full Name :</string>
    <string name="edit">edit profile</string>
    <string name="save">save</string>
    <string name="edit_profile">edit profile</string>
    <string name="name_cannot_be_empty">name cannot be empty</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="stockQuantity">stockQuantity</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="dose">Dose</string>
    <string name="pills_left">pills left</string>
    <string name="delete_medicine">delete medicine</string>
    <string name="edit_medicine">edit medicine</string>
    <string name="back">back</string>
    <string name="add_reminder">add reminder</string>
    <string name="reminders">Reminders</string>
    <string name="start_date">Start date :</string>
    <string name="end_date">End date :</string>
</resources>