<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/etMedicineName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etMedicineDose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dose"
        android:inputType="text"
        android:layout_marginTop="12dp"/>

    <EditText
        android:id="@+id/etMedicinePillCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/stockQuantity"
        android:inputType="text"
        android:layout_marginTop="12dp"/>

    <EditText
        android:id="@+id/etMedicineDescription"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginTop="12dp"
        android:gravity="top"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:minLines="2" />
</LinearLayout>
