<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/loginFragment">

    <!-- Authentication Flow -->
    <!-- Login Fragment -->
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.mobileapp.medremiderapp.ui.fragments.login.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login">

        <!-- Navigate to Register -->
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />

        <!-- Navigate to Home after login success -->
        <action
            android:id="@+id/action_loginFragment_to_navigation_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <!-- Register Fragment -->
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.mobileapp.medremiderapp.ui.fragments.register.RegisterFragment"
        android:label="Register"
        tools:layout="@layout/fragment_register">

        <!-- Navigate back to Login after successful registration -->
        <action
            android:id="@+id/action_registerFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/registerFragment"
            app:popUpToInclusive="true" />
    </fragment>


    <!-- Main App Flow -->
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.mobileapp.medremiderapp.ui.fragments.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_home_to_medicine"
            app:destination="@id/navigation_medicine" />

        <action
            android:id="@+id/action_home_to_profile"
            app:destination="@id/navigation_profile" />
    </fragment>

    <fragment
        android:id="@+id/navigation_medicine"
        android:name="com.mobileapp.medremiderapp.ui.fragments.medicine.MedicineFragment"
        android:label="@string/title_medicine"
        tools:layout="@layout/fragment_medicine">

        <action
            android:id="@+id/action_medicine_to_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.mobileapp.medremiderapp.ui.fragments.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">

        <action
            android:id="@+id/action_profile_to_home"
            app:destination="@id/navigation_home" />

        <action
            android:id="@+id/action_profile_to_login"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true"/>

    </fragment>

</navigation>